<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_label"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_label"
                android:background="@drawable/button_background"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account_label"
                android:background="@drawable/button_background"/>
        </LinearLayout>
    </LinearLayout>
</layout>